package lab2.modules.interfaces;

/**
 * Интерфейс для модулей функций, которые могут вычислять значения и записывать их в CSV файл.
 * Требует метод получения имени модуля для формирования имени файла и метод вычисления значения с заданной точностью.
 */
public interface NamedOutputFunction extends Computable{
    /**
     * Возвращает имя модуля (используется для формирования имени CSV файла).
     * @return имя модуля
     */
    String getName();
}