@startuml
' UML диаграмма классов для модулей проекта lab2
' Интерфейсы объявлены внизу для визуального расположения

' Классы ядра (core)
class Cosine implements NamedOutputFunction {
  - precision: double
  + Cosine(precision: double)
  + compute(x: double): double
  + getName(): String
  - reduceAngle(x: double): double
}

class NaturalLogarithm implements NamedOutputFunction {
  - precision: double
  + NaturalLogarithm(precision: double)
  + compute(x: double): double
  + getName(): String
  - calculateLog2(): double
}

' Производные классы (derived)
class SineNamed implements NamedOutputFunction {
  - cos: Cosine
  - name: String
  + SineNamed(cos: Cosine)
  + compute(x: double): double
  + getName(): String
}



class CotangentNamed implements NamedOutputFunction {
  - cos: Cosine
  - sin: SineNamed
  - name: String
  + CotangentNamed(cos: Cosine, sin: SineNamed)
  + compute(x: double): double
  + getName(): String
}

class SecantNamed implements NamedOutputFunction {
  - cos: Cosine
  - name: String
  + SecantNamed(cos: Cosine)
  + compute(x: double): double
  + getName(): String
}

class CosecantNamed implements NamedOutputFunction {
  - sin: SineNamed
  - name: String
  + CosecantNamed(sin: SineNamed)
  + compute(x: double): double
  + getName(): String
}

class LogarithmNamed implements NamedOutputFunction {
  - calculator: NaturalLogarithm
  - base: double
  - name: String
  + LogarithmNamed(base: double, ln: NaturalLogarithm)
  + compute(x: double): double
  + getName(): String
  + getBase(): double
}

class ComplexNamed implements NamedOutputFunction {
  - name: String
  - cos: Cosine
  - sin: SineNamed
  - csc: CosecantNamed
  - sec: SecantNamed
  - ctg: CotangentNamed
  - ln: NaturalLogarithm
  - log3: LogarithmNamed
  - log10: LogarithmNamed
  + ComplexNamed(precision: double)
  + compute(x: double): double
  + getName(): String
}

' Классы вывода (output)
class Range {
  - start: double
  - end: double
  - step: double
  + Range(start: double, end: double, step: double)
  + pointCount(): int
  + withStep(newStep: double): Range
  + toString(): String
}

class FunctionManager {
  - module: NamedOutputFunction
  - range: Range
  - writer: Writer
  + FunctionManager(module: NamedOutputFunction)
  + setRange(range: Range)
  + writeData(): void
  - generateData(): List<double[]>
}

class CSVWriter implements Writer {
  - DEFAULT_SEPARATOR: String
  + write(data: List<double[]>, filename: String): void
}

' Интерфейсы (расположены внизу)
interface Computable {
  + ZERO_THRESHOLD: double
  + MAX_PRECISION: double
  + compute(x: double): double
}

interface NamedOutputFunction {
  + getName(): String
}

interface Writer {
  + write(data: List<double[]>, filename: String): void
}

' Наследование
NamedOutputFunction --|> Computable
CSVWriter ..|> Writer

' Композиции/агрегации (зависимости между модулями)
SineNamed --> Cosine
CotangentNamed --> Cosine
CotangentNamed --> SineNamed
SecantNamed --> Cosine
CosecantNamed --> SineNamed
LogarithmNamed --> NaturalLogarithm
ComplexNamed --> Cosine
ComplexNamed --> SineNamed
ComplexNamed --> CosecantNamed
ComplexNamed --> SecantNamed
ComplexNamed --> CotangentNamed
ComplexNamed --> NaturalLogarithm
ComplexNamed --> LogarithmNamed

' Зависимости классов вывода
FunctionManager --> NamedOutputFunction
FunctionManager --> Range
FunctionManager --> Writer

@enduml